Refactor db module and create shutdown hooks.